<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">MobileHunt</string>
    <string name="sample_pref_click_pop_up">Click to pop up a list to choose from</string>
    <string name="sample_pref_sel_dialog">Selection Dialog</string>
    <string name="sample_pref_choose_number">Choose a number</string>
    <string name="sample_pref_check_it">Check It</string>
    <string name="sample_pref_add_prefs">Additional preferences</string>
    <string name="sample_pref_categ_3">Preferences category 3</string>
    <string name="sample_pref_categ_2">Preferences category 2</string>
    <string name="sample_pref_categ_1">Preferences category 1</string>
    <string name="sample_pref_summary">Preference Summary</string>
    <string name="sample_pref_other_ckb">Another Checkbox</string>
    <string name="sample_pref_other_screen">Another Preference Screen</string>
    <string name="sample_pref_ckb">Checkbox Preference</string>
    <string name="sample_pref_txt_dialog">Text Entry Dialog</string>
    <string name="sample_pref_enter_txt">Enter something</string>
    <string name="ConfActivityActivityLabel">Configuración</string>
    <string-array name="numbers">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="numbernames">
        <item>One</item>
        <item>Two</item>
        <item>Three</item>
    </string-array>
    <string name="bienv">BIENVENIDO</string>
    <string name="bienvMsj">Este es el asistente que te guiará en la configuración inicial de tu dispositivo.
Este programa te permitirá:\n-Registrar las coordenadas de este dispositivo móvil (Smartphone, Tablet, etc…).\n-Enviarlas a un servidor Web.\n-Consultar la información en Tiempo Real en un explorador de Internet con soporte para HTML5 (recomendado Chrome, Firefox) en la página http://igconsultores.net/raymundo.\n- Adicionalmente se podrá establecer una restricción de área a este dispositivo, que al no ser atendida, emitirá una señal de alarma y enviará un mail al administrador de la aplicación reportando el suceso.</string>
    <string name="pswSetTxt">Establecer contraseña de Administrador</string>
    <string name="pswSetTit">ADMIN PSW</string>
    <string name="pswSetHint">Ejemplo:1912</string>
    <string name="aceptar">Aceptar</string>
    <string name="pswSetConf">Confirmar contraseña</string>
    <string name="confUser">Nombre de Usuario</string>
    <string name="confDesc">Descripción del Dispositivo</string>
    <string name="confTit">Configuración</string>
    <string name="ConfMues">Tiempo de muestreo: </string>
    <string name="confComp">Institución/Compañia</string>
    <string name="pswGetTxt">Ingresa la contraseña de ADMINISTRADOR</string>
    <string name="mainTit">Mi Ubicación</string>
    <string name="acerTit">Acerca de</string>
    <string name="acerTxt">Esta aplicación se implementó y diseñó en el año 2012 con el fin de la aprobación del Proyecto Terminal de la Carrera de Ingeniería en Computación UAM Azcapotzalco.\nComentarios:\nraymundoc.vela@hotmail.com\n Jorge Raymundo Castillo Velázquez</string>
    <string name="mainBestp">Mejor Proveedor</string>
    <string name="confReadEdit">Editar</string>
    <string name="mainPsw">-Cambiar contraseña</string>
    <string name="confDelPrefs">Eliminar Preferencias</string>
    <string name="mainGps">GPS</string>
    <string name="mainNW">Basada en la red</string>
    <string name="mainPie">A pie</string>
    <string name="mainAuto">En auto</string>
    <string name="mainModo">Modo de traslado:</string>
    <string name="version">0.9.51</string>
    <string name="menuConf">Configuración</string>
    <string name="menuAcer">Acerca de</string>
    <string name="MainModLoc">Obtener datos del:</string>
    <string name="no">No</string>
    <string name="yes">Si</string>
    <string name="menuDelPrefs">Borrar Configuración</string>
    <string name="menuEditPrefs">Editar Configuración</string>
    <string name="confReadAlertEditMsg">¿Seguro que deseas actualizar estos datos?</string>
    <string name="confReadAlertDelMsg">Seguro que deseas borrar los datos de la aplicación e iniciar el asistente de configuración?</string>
    <string name="confMail">Mail (Para envió de notificaciones)</string>
    <string name="confMsj">Estos datos servirán para identificar a este dispositivo en la página web\nhttp://igconsultores.net/raymundo\n</string>
    <string name="pswSetDebe">Debe contener sólo 4 números</string>
    <string name="mainOnlineNo">Conexión a INTERNET necesaria</string>
</resources>
