<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="2dip"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/pswGetTit_textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pswSetTit"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/pswGetTxt_textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pswGetTxt" />

    <EditText
        android:id="@+id/pswGet_editText1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dip"
        android:layout_marginLeft="30dip"
        android:layout_marginRight="30dip"
        android:layout_marginTop="5dip"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/pswSetHint"
        android:inputType="phone" android:digits="123456789" android:maxLength="4" android:password="true">

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/pswGetAcep_button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aceptar" />

</LinearLayout>