<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="5dip" >

    <TextView
        android:id="@+id/pswSetTit_textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pswSetTit"
        android:textAppearance="?android:attr/textAppearanceLarge" android:typeface="serif" android:textStyle="bold" android:textSize="25sp"/>

    <TextView
        android:id="@+id/pswSetTxt_textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:padding="5dip"
        android:text="@string/pswSetTxt" android:typeface="serif" android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pswSetDebe" android:typeface="serif"/>

    <EditText
        android:id="@+id/pswSet_editText1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dip"
        android:layout_marginLeft="30dip"
        android:layout_marginRight="30dip"
        android:layout_marginTop="5dip"
        android:digits="0123456789"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/pswSetHint"
        android:inputType="phone"
        android:maxLength="4"
        android:password="true" />

    <TextView
        android:id="@+id/pswSetConf_textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pswSetConf"
        android:textStyle="bold"
        android:typeface="serif"
        android:visibility="gone" />

    <EditText
        android:textStyle="bold"
        android:typeface="serif"
        android:id="@+id/pswSet_editText2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dip"
        android:layout_marginLeft="30dip"
        android:layout_marginRight="30dip"
        android:layout_marginTop="5dip"
        android:digits="0123456789"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/pswSetConf"
        android:inputType="phone"
        android:maxLength="4"
        android:password="true"
        android:visibility="gone" />

    <Button
        android:typeface="serif"
        android:id="@+id/pswSetCont_button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aceptar"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/pswSet_linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    </LinearLayout>

</LinearLayout>