<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical" android:padding="2dip">

    <TextView
        android:id="@+id/confTit_textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confTit"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="5sp" >

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/linearLayout4"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/confComp_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="2dip"
                        android:text="@string/confComp" />

                    <EditText
                        android:id="@+id/confComp_editText"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textCapCharacters|textNoSuggestions" >

                        <requestFocus />
                    </EditText>
                </LinearLayout>

                <TextView
                    android:id="@+id/confUsr_textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dip"
                    android:text="@string/confUser" />

                <EditText
                    android:id="@+id/confUsr_editText1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapCharacters|textNoSuggestions" />

                <TextView
                    android:id="@+id/confDesc_textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="2dip"
                    android:text="@string/confDesc" />

                <EditText
                    android:id="@+id/confDesc_editText2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapCharacters|textNoSuggestions" />

                <TextView
                    android:id="@+id/textView_confMail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/confMail" />

                <EditText
                    android:id="@+id/editText_confMail"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:text="" />

                <LinearLayout
                    android:id="@+id/linearLayout3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/confMues_textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="2dip"
                        android:text="@string/ConfMues" />

                    <TextView
                        android:id="@+id/confMues_textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dip"
                        android:text="TextView" />
                </LinearLayout>

                <SeekBar
                    android:id="@+id/confMues_seekBar1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:max="59"
                    android:padding="2dip"
                    android:progress="5"
                    android:soundEffectsEnabled="true" />

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="center_vertical|center_horizontal" >

                    <Button
                        android:id="@+id/confAcep_button1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/aceptar" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>