<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" android:padding="5dip" android:gravity="center_horizontal">

    <TextView
        android:id="@+id/bienv_textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/bienv"
        android:textAppearance="?android:attr/textAppearanceLarge" android:padding="5sp" android:typeface="serif" android:textStyle="bold" android:textSize="25sp"/>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center|fill_vertical"
                android:orientation="vertical" >

            <TextView
                android:id="@+id/bienv_textView2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dip"
                android:text="@string/bienvMsj"
                android:textStyle="bold"
                android:typeface="serif" />

            <Button
                android:id="@+id/bienv_contbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/aceptar"
                android:typeface="serif" />
        </LinearLayout>
        </LinearLayout>

    </ScrollView>

</LinearLayout>