<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/mainTit_textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5sp"
        android:text="@string/mainTit"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="25sp"
        android:textStyle="bold"
        android:typeface="serif" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:addStatesFromChildren="true"
            android:baselineAligned="true"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical"
            android:padding="5sp" >

            <TextView
                android:id="@+id/textView2MainLatiTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="20dip"
                android:text="Esperando información....\nLatitud: "
                android:typeface="serif" />

            <TextView
                android:id="@+id/textView4MainLongTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="20dip"
                android:text="Longitud :"
                android:typeface="serif" />

            <TextView
                android:id="@+id/textView1MainPres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="20dip"
                android:text="Presición:"
                android:typeface="serif" />

            <TextView
                android:id="@+id/textView2MainTimes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="20dip"
                android:text="TimeStamp:"
                android:typeface="serif" />

            <TextView
                android:id="@+id/textViewMainModLoc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dip"
                android:text="@string/MainModLoc"
                android:textSize="15sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <RadioGroup
                android:id="@+id/radioGroup1MainLoc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <RadioButton
                    android:id="@+id/radio0MainGps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/mainGps"
                    android:typeface="serif" />

                <RadioButton
                    android:id="@+id/radio1MainNw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mainNW"
                    android:typeface="serif" />
            </RadioGroup>
            <!--
            <Button
                android:id="@+id/button1MainFtpUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Button" />
            -->

            <TextView
                android:id="@+id/textViewMainModo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dip"
                android:text="@string/mainModo"
                android:textSize="15sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <RadioGroup
                android:id="@+id/radioGroupMainModo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radioMainPie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/mainPie"
                    android:typeface="serif" />

                <RadioButton
                    android:id="@+id/radioMainAuto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mainAuto"
                    android:typeface="serif" />
            </RadioGroup>
            <!--
            <TextView
                android:id="@+id/mainChgPsw_textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dip"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/mainPsw"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="20sp" />
            -->


            <WebView
                android:id="@+id/webViewMainJs"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:visibility="gone" />
            <!--  -->

        </LinearLayout>
    </ScrollView>

</LinearLayout>