<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="2dip"
    android:orientation="vertical"
    android:padding="5dip" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal" >

        <TextView
            android:id="@+id/confRo_textView1Tit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confTit"
            android:textAppearance="?android:attr/textAppearanceLarge" android:typeface="serif" android:textStyle="bold" android:textSize="25sp"/>
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/confRo_textView4Comp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dip"
                    android:text="@string/confComp"
                    android:textStyle="bold"
                    android:typeface="serif" />

                <EditText
                    android:id="@+id/confRo_editText3Comp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:ems="10"
                    android:focusable="false"
                    android:focusableInTouchMode="false" >

                    <requestFocus />
                </EditText>

                <TextView
                    android:id="@+id/confRo_textView2Usr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dip"
                    android:text="@string/confUser"
                    android:textStyle="bold"
                    android:typeface="serif" />

                <EditText
                    android:id="@+id/confRo_editText1Usr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:ems="10"
                    android:focusable="false"
                    android:focusableInTouchMode="false" />

                <TextView
                    android:id="@+id/confRo_textView3Desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dip"
                    android:text="@string/confDesc"
                    android:textStyle="bold"
                    android:typeface="serif" />

                <EditText
                    android:id="@+id/confRo_editText2Desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:ems="10"
                    android:focusable="false"
                    android:focusableInTouchMode="false" />

                <TextView
                    android:id="@+id/textView_confMail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dip"
                    android:text="@string/confMail"
                    android:textStyle="bold"
                    android:typeface="serif" />

                <EditText
                    android:id="@+id/editText_confMail"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:ems="10"
                    android:focusable="false"
                    android:focusableInTouchMode="false" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/confRo_textView5Mues"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="2dip"
                        android:text="@string/ConfMues"
                        android:textStyle="bold"
                        android:typeface="serif" />

                    <TextView
                        android:id="@+id/confRo_textView6time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="2dip"
                        android:text="TextView"
                        android:textStyle="bold"
                        android:typeface="serif" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>